#204 Fixed translation. Fixed missed tags. Fixed i18n domain

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -24,7 +24,7 @@ domain = zojax.content.urlmapper
 output = ${buildout:directory}/src/zojax/content/urlmapper/locales
 eggs = zojax.content.urlmapper [test]
 zcml =
-  <configure i18n_domain="zope"
+  <configure i18n_domain="zojax.content.urlmapper"
              xmlns:zcml="http://namespaces.zope.org/zcml"
              xmlns:browser="http://namespaces.zope.org/browser">
     <include package="zojax.autoinclude" file="meta.zcml" />
